--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
-    "express": "~4.16.1",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.2.7",
     "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
