--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "v14.15.3"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devStart":"nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^0.9.2",
