--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "devStart":"nodemon ./bin/www"
+    "devStart": "nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^0.9.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
